decimal work now
Decimal period correctly implemented. Still missing backspace and some CSS commented at the bottom of the JS file.
Check if calculations are done correctly possible 0.01 error in floating point calculus?

--- a/calc/CSS/style.css
+++ b/calc/CSS/style.css
@@ -30,10 +30,15 @@ h1 {
 
 .operator:hover {
     background-color: #e59400;
+    cursor: pointer;
 }
 
 .equal {
     background-color: orange;
+}
+
+.equal:hover {
+    cursor: pointer;
 }
 
 .helper {
